--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,8 @@
     />
 
     <!-- Bootstrap Font Icon CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
-    />
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+
   </head>
   <body>
     <app-root></app-root>
